# rqutils

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: class.rst
docs/source/apidocs/: math.rst  paulis.rst  qprint.rst  rqutils.rst
examples/: sqd.py  svsim.py
rqutils/: __init__.py  _types.py  ground_locg.py  math.py  paulis.py  qprint.py  sqd.py  svsim.py
rqutils/paulis/: __init__.py  general.py  symplectic.py
tests/: paulis.ipynb  qprint.ipynb  sqd.ipynb
