[metadata]
name = rqutils
version = 0.1.1
author = Yutaro Iiyama
author_email = iiyama@icepp.s.u-tokyo.ac.jp
description = Random quantum utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = quantum, physics
url = https://github.com/UTokyo-ICEPP/rqutils
project_urls =
    Bug Tracker = https://github.com/UTokyo-ICEPP/rqutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
setup_requires =
    numpy

[options.packages.find]
include = rqutils*
